--- a/.github/workflows/push-build.yaml
+++ b/.github/workflows/push-build.yaml
@@ -23,7 +23,7 @@ jobs:
           ref: ${{ github.ref }}
 
       - name: Setup Google Cloud
-        uses: google-github-actions/setup-gcloud@master
+        uses: google-github-actions/setup-gcloud@main
         with:
           service_account_key: ${{ secrets.GCP_SERVICE_ACCOUNT_SECRET_KEY }}
           project_id: ai-chef-by-chat-gpt
