--- a/.github/workflows/push-build.yaml
+++ b/.github/workflows/push-build.yaml
@@ -40,8 +40,8 @@ jobs:
 
       - name: Build
         run: |
-          docker build -t asia-northeast1-docker.pkg.dev/ai-chef-by-chat-gpt/ai-chef-backend/backend:${{ env.TAG }} ./
+          docker build -t asia-northeast1-docker.pkg.dev/ai-chef-by-chat-gpt/ai-chef-backend/backend:latest ./
 
       - name: Push
         run: |
-          docker push asia-northeast1-docker.pkg.dev/ai-chef-by-chat-gpt/ai-chef-backend/backend:${{ env.TAG }}
+          docker push asia-northeast1-docker.pkg.dev/ai-chef-by-chat-gpt/ai-chef-backend/backend:latest
