feat: headerにContent-Typeを追加

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,5 +6,8 @@ services:
       context: ./backend
     container_name: ai-chef
     image: ai-chef
+    volumes:
+      - ./backend:/app
     ports:
       - "8000:8000"
+    restart: always
