--- a/.github/workflows/push-build.yaml
+++ b/.github/workflows/push-build.yaml
@@ -40,8 +40,8 @@ jobs:
 
       - name: Build
         run: |
-          docker build -t asia-northeast1-docker.pkg.dev/ai-chef-by-chat-gpt/ai-chef-backend/backend:latest ./
+          docker build -t asia-northeast1-docker.pkg.dev/ai-chef-by-chat-gpt-383400/ai-chef-backend/backend:${{ env.TAG }} ./
 
       - name: Push
         run: |
-          docker push asia-northeast1-docker.pkg.dev/ai-chef-by-chat-gpt/ai-chef-backend/backend:latest
+          docker push asia-northeast1-docker.pkg.dev/ai-chef-by-chat-gpt-383400/ai-chef-backend/backend:${{ env.TAG }}
